Correction du bug #6070 (Revoir l'ergonomie ( scrollbar ) et les caractères ASCII ): à présent les champs select de la partie "Expériences professionnelles significatives" du formulaire d'ajout CER sont limités en largeur, ce qui devrait corriger le problème d'ergonomie.

--- a/app/webroot/css/all.form.css
+++ b/app/webroot/css/all.form.css
@@ -187,3 +187,12 @@ h2.bilanparcours {
 table.cers93 div.input label {
     width: 100%;
 }
+
+table#Expprocer93 div.input.select select {
+	max-width: 15em;
+	overflow: hidden;
+}
+
+table#Expprocer93 div.input input {
+	max-width: 8em;
+}
